Used SequencedCollections for the tests to remove analysis complaints